--- a/my-app/src/app/header/header.component.html
+++ b/my-app/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <div class="header">
-  <h1>Angular With NodeJS</h1>
+    <button class="btn third pull-left" (click)="goBack()">Home</button>
+    <br><br>
+    <div class="text-center">
+        <h1>LCD Monitor Display</h1>
+    </div>
 </div>
