--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,12 +1,15 @@
 <app-header></app-header>
 <div class="container text-center">
+    <br>
     <form [formGroup]="userForm" (ngSubmit)="onSubmit(userForm.value)" required>
-            <div class="form-group" style="border: black solid 2px">
-                <label for="monitor">Write your message!</label>
-                <input type="text" class="form-control" name="monitor" formControlName="monitor" id="monitor">
+            <div class="form-group">
+                <br>
+                <label for="monitor">Display your message!</label>
+                <br>
+                <input style="border: black solid 2px" type="text" class="form-control" name="monitor" formControlName="monitor" id="monitor" placeholder="Type your message here!">
 
             </div>
-        <button type="submit" class="btn btn-danger">Create</button>
+        <button type="submit" [disabled]="!userForm.valid" class="btn btn-danger">Send</button>
     </form>
 </div>
 
