Added database queries to fetch recent searches

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -15,6 +15,8 @@
         </div>
         <button type="submit" (click)="showAlert()" [disabled]="!userForm.valid" class="btn btn-danger">Send</button>
     </form>
+    <br>
+    <button class="btn third" (click)="querySearch()">Show recent searches</button>
 </div>
 
 </body>
