--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -15,3 +15,16 @@
     opacity: 1;
     transform: translateY(1.25rem);
 }
+
+.third {
+    border-color: gray;
+    color: white;
+    box-shadow: 0 0 40px 40px gray inset, 0 0 0 0 gray;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
+}
+
+.third:hover {
+    box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
+}
+
