elements from databse show on ui

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -17,8 +17,8 @@
     </form>
     <br>
     <button class="btn third" (click)="querySearch()">Show recent searches</button>
+    <div id="history">{{history_data}}</div>
 </div>
-
 
 </body>
 <script src="/node_modules/angular/angular.js"></script>
